[package]
name = "rust-oidc-test"
version = "0.1.0"
authors = ["Graham Esau <gesau@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12"
reqwest = { version = "0.10", features = ["json"] }
ring = "0.16.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
